--- a/ml-dev/embedded_analyzer.ipynb
+++ b/ml-dev/embedded_analyzer.ipynb
@@ -33,21 +33,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-06-12 21:47:05.142007: I tensorflow/core/util/port.cc:110] oneDNN custom operations are on. You may see slightly different numerical results due to floating-point round-off errors from different computation orders. To turn them off, set the environment variable `TF_ENABLE_ONEDNN_OPTS=0`.\n",
-      "2023-06-12 21:47:05.312292: E tensorflow/compiler/xla/stream_executor/cuda/cuda_dnn.cc:7704] Unable to register cuDNN factory: Attempting to register factory for plugin cuDNN when one has already been registered\n",
-      "2023-06-12 21:47:05.312316: E tensorflow/compiler/xla/stream_executor/cuda/cuda_fft.cc:609] Unable to register cuFFT factory: Attempting to register factory for plugin cuFFT when one has already been registered\n",
-      "2023-06-12 21:47:05.312845: E tensorflow/compiler/xla/stream_executor/cuda/cuda_blas.cc:1520] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2023-06-12 21:47:05.393812: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
-      "To enable the following instructions: AVX2 AVX_VNNI FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -56,20 +43,17 @@
    ],
    "metadata": {
     "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-12T21:47:07.832419600Z",
-     "start_time": "2023-06-12T21:47:03.773520Z"
-    }
+    "is_executing": true
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-06-12T21:50:12.183290100Z",
-     "start_time": "2023-06-12T21:50:12.140553800Z"
+     "end_time": "2023-06-14T14:06:12.403552700Z",
+     "start_time": "2023-06-14T14:06:12.312035400Z"
     }
    },
    "outputs": [],
@@ -84,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "outputs": [
     {
      "data": {
@@ -102,8 +86,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-12T21:50:12.834910Z",
-     "start_time": "2023-06-12T21:50:12.755059800Z"
+     "end_time": "2023-06-14T14:06:12.994862200Z",
+     "start_time": "2023-06-14T14:06:12.889839300Z"
     }
    }
   },
@@ -151,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "outputs": [
     {
      "name": "stdout",
@@ -162,16 +146,16 @@
     },
     {
      "data": {
-      "text/plain": "array([[0.    , 0.0625, 0.    , 0.9375]], dtype=float32)"
+      "text/plain": "array([[0.078125  , 0.14453125, 0.1328125 , 0.1640625 , 0.04296875,\n        0.046875  , 0.10546875, 0.19140625, 0.05078125, 0.046875  ]],\n      dtype=float32)"
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Quantized test\n",
-    "tflite_test = tf.lite.Interpreter('lstm_model_quantized.tflite')\n",
+    "tflite_test = tf.lite.Interpreter('conv_lstm_model_quantized.tflite')\n",
     "tflite_test.allocate_tensors()\n",
     "print(tflite_test.get_input_details()[0]['shape'])\n",
     "\n",
@@ -187,8 +171,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-12T21:50:28.724916600Z",
-     "start_time": "2023-06-12T21:50:28.715952900Z"
+     "end_time": "2023-06-14T15:40:39.772542100Z",
+     "start_time": "2023-06-14T15:40:39.755039400Z"
     }
    }
   },
