Add some updated processing

--- a/ml-dev/analyze_results.ipynb
+++ b/ml-dev/analyze_results.ipynb
@@ -2,12 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2023-06-21T13:10:19.427784200Z",
-     "start_time": "2023-06-21T13:10:19.415271900Z"
+     "end_time": "2023-06-21T17:37:29.183878600Z",
+     "start_time": "2023-06-21T17:37:27.283931800Z"
     }
    },
    "outputs": [],
@@ -17,8 +17,14 @@
     "import numpy as np\n",
     "from utils import Fold, Gestures\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
-    "\n",
+    "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [],
+   "source": [
     "\n",
     "def load_pickle(basepath, name):\n",
     "    save_path = os.path.join(basepath, name)\n",
@@ -67,11 +73,53 @@
     "    plt.savefig(save_path, bbox_inches=\"tight\")\n",
     "\n",
     "    plt.show()"
-   ]
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-21T17:37:29.199604800Z",
+     "start_time": "2023-06-21T17:37:29.187898500Z"
+    }
+   }
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 19,
+   "outputs": [],
+   "source": [
+    "from load_data import Fold as OldFold\n",
+    "\n",
+    "fold_data = {}\n",
+    "\n",
+    "conv_lstm = load_pickle('../results', 'lstm.pickle')\n",
+    "for item in conv_lstm:\n",
+    "    iterations = conv_lstm.get(item).get('iterations')\n",
+    "    folds = conv_lstm.get(item).get('folds')\n",
+    "\n",
+    "    fold_data.setdefault(item, {'iterations': iterations, 'folds': {}})\n",
+    "    fold_data.get(item).get('folds').setdefault(Fold.FIVE, [])\n",
+    "    fold_data.get(item).get('folds').setdefault(Fold.TEN, [])\n",
+    "\n",
+    "    for f in folds.get(OldFold.FIVE):\n",
+    "        fold_data.get(item).get('folds').get(Fold.FIVE).append(f)\n",
+    "\n",
+    "    for f in folds.get(OldFold.TEN):\n",
+    "        fold_data.get(item).get('folds').get(Fold.TEN).append(f)\n",
+    "\n",
+    "with open('../results/lstm_new.pickle', 'wb') as f:\n",
+    "    pickle.dump(fold_data, f)\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-06-21T17:47:35.672779200Z",
+     "start_time": "2023-06-21T17:47:35.649701900Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "outputs": [
     {
      "name": "stdout",
@@ -126,20 +174,20 @@
    ],
    "source": [
     "# Analyze accuracies\n",
-    "conv_lstm = load_pickle('../results', 'conv_lstm.pickle')\n",
+    "conv_lstm = load_pickle('../results', 'conv_lstm_new.pickle')\n",
     "display_results(conv_lstm)"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-21T12:30:51.128912300Z",
-     "start_time": "2023-06-21T12:30:51.118399900Z"
+     "end_time": "2023-06-21T17:46:32.636419400Z",
+     "start_time": "2023-06-21T17:46:32.626419500Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 20,
    "outputs": [
     {
      "name": "stdout",
@@ -200,22 +248,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-21T12:34:02.776920700Z",
-     "start_time": "2023-06-21T12:34:02.760515200Z"
+     "end_time": "2023-06-21T17:47:38.807839100Z",
+     "start_time": "2023-06-21T17:47:38.783704700Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 18,
    "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fold.TEN\n"
-     ]
-    },
     {
      "data": {
       "text/plain": "<Figure size 640x480 with 2 Axes>",
@@ -226,11 +267,8 @@
     }
    ],
    "source": [
-    "conv_lstm = load_pickle('../results', 'conv_lstm.pickle')\n",
-    "# Ugly hack because python enums won't work as expected\n",
-    "fold_idx = list(conv_lstm.get('ConvLSTM 64').get('folds').keys())[0]\n",
-    "print(fold_idx)\n",
-    "fold_ten = conv_lstm.get('ConvLSTM 64').get('folds').get(fold_idx)\n",
+    "conv_lstm = load_pickle('../results', 'conv_lstm_new.pickle')\n",
+    "fold_ten = conv_lstm.get('ConvLSTM 64').get('folds').get(Fold.TEN)\n",
     "\n",
     "confusions = np.array(list(map(lambda x: x['confusion_per_fold'], fold_ten)))\n",
     "draw_conf_matrix(confusions, '../results/figs/', \"Confusion Matrix ConvLSTM 64-unit\")"
@@ -238,87 +276,15 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-21T13:12:56.216463900Z",
-     "start_time": "2023-06-21T13:12:55.688028100Z"
+     "end_time": "2023-06-21T17:47:10.738914400Z",
+     "start_time": "2023-06-21T17:47:10.360293500Z"
     }
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'confusion_per_fold' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[148], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m overall_confusion \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39mzeros(\u001B[43mconfusion_per_fold\u001B[49m[\u001B[38;5;241m0\u001B[39m]\u001B[38;5;241m.\u001B[39mshape)\n\u001B[0;32m      2\u001B[0m \u001B[38;5;28;01mfor\u001B[39;00m conf \u001B[38;5;129;01min\u001B[39;00m confusion_per_fold:\n\u001B[0;32m      3\u001B[0m     overall_confusion \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39madd(overall_confusion, conf)\n",
-      "\u001B[1;31mNameError\u001B[0m: name 'confusion_per_fold' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "overall_confusion = np.zeros(confusion_per_fold[0].shape)\n",
-    "for conf in confusion_per_fold:\n",
-    "    overall_confusion = np.add(overall_confusion, conf)\n",
-    "\n",
-    "# Normalize predictions\n",
-    "normalized_confusion = overall_confusion / overall_confusion.sum(axis=1, keepdims=1)\n",
-    "normalized_confusion = normalized_confusion.round(decimals=2)\n",
-    "\n",
-    "ConfusionMatrixDisplay(normalized_confusion, display_labels=filtered_gestures_list).plot(cmap='Blues', xticks_rotation='vertical')\n",
-    "\n",
-    "plt.title(\"Confusion Matrix LSTM 64-unit\")\n",
-    "plt.savefig('output_figures/confusion_matrix_lstm.svg', bbox_inches=\"tight\")\n",
-    "\n",
-    "plt.show()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-21T13:04:34.322502800Z",
-     "start_time": "2023-06-21T13:04:34.276718Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "conv_lstm_128\n",
-      "\tNormal size: 770920 bytes (770.9 Kb)\n",
-      "\tQuantized size: 209072 bytes (209.1 Kb)\n",
-      "conv_lstm_16\n",
-      "\tNormal size: 390956 bytes (391.0 Kb)\n",
-      "\tQuantized size: 112584 bytes (112.6 Kb)\n",
-      "conv_lstm_32\n",
-      "\tNormal size: 420676 bytes (420.7 Kb)\n",
-      "\tQuantized size: 120240 bytes (120.2 Kb)\n",
-      "conv_lstm_64\n",
-      "\tNormal size: 504656 bytes (504.7 Kb)\n",
-      "\tQuantized size: 141664 bytes (141.7 Kb)\n",
-      "lstm_128\n",
-      "\tNormal size: 786352 bytes (786.4 Kb)\n",
-      "\tQuantized size: 201936 bytes (201.9 Kb)\n",
-      "lstm_16\n",
-      "\tNormal size: 72236 bytes (72.2 Kb)\n",
-      "\tQuantized size: 21952 bytes (22.0 Kb)\n",
-      "lstm_32\n",
-      "\tNormal size: 149676 bytes (149.7 Kb)\n",
-      "\tQuantized size: 41520 bytes (41.5 Kb)\n",
-      "lstm_64\n",
-      "\tNormal size: 329136 bytes (329.1 Kb)\n",
-      "\tQuantized size: 86800 bytes (86.8 Kb)\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "# Analyze file sizes\n",
     "base = '../models'\n",
@@ -329,19 +295,6 @@
     "    tflite_quantized_size = os.path.getsize(os.path.join(path, f\"{model}_quantized.tflite\"))\n",
     "    print(\"\\tNormal size: %d bytes (%.1f Kb)\\n\\tQuantized size: %d bytes (%.1f Kb)\" % (tflite_size, round(float(tflite_size / 1000), 1), tflite_quantized_size, round(float(tflite_quantized_size / 1000), 1)))"
    ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-21T12:15:01.292562600Z",
-     "start_time": "2023-06-21T12:15:01.287047Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
    }
